--- a/assets/main/style.css
+++ b/assets/main/style.css
@@ -11,8 +11,10 @@ body{
 
 header{
     background-color: rgba(0,0,0,0.5);
-    position: fixed;
+    position:relative;
     width: 100%;
+    z-index: 1;
+
 }
 
 a{
@@ -35,7 +37,7 @@ nav{
 
 header nav ul li{
     display: inline-block;
-    margin: 55px;
+    margin: 25px;
 }
 
 .dropbtn {
@@ -54,10 +56,9 @@ header nav ul li{
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    background-color: gray;
+    min-width: 180px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.3);
     z-index: 1;
 }
 
@@ -68,8 +69,279 @@ header nav ul li{
     display: block;
 }
 
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {
+    background-color: black;
+    color: yellow;
+
+}
 
 .dropdown:hover .dropdown-content {display: block;}
 
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+#carouselExampleIndicators{
+
+    z-index: 0;
+    background-color: white;
+    position: fixed;
+    top:0;
+}
+
+#slideShow img{
+    height: 900px;
+}
+
+#wrapper{
+    box-sizing:border-box;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    margin: auto;
+
+}
+
+.btn-menu{
+    position:relative;
+    text-decoration:none;
+    color:#fff;
+    letter-spacing:1px;
+    font-size:2rem;
+    box-sizing:border-box;
+}
+
+.btn-menu span{
+    position:relative;
+    box-sizing:border-box;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    width:200px;
+    height:200px;
+}
+
+.btn-menu span:before{
+    content:'';
+    width:100%;
+    height:100%;
+    display:block;
+    position:absolute;
+    border-radius:100%;
+    border:7px solid #F3CF14;
+    box-sizing:border-box;
+    transition: all .85s cubic-bezier(0.25, 1, 0.33, 1);
+    box-shadow: 0 30px 85px rgba(0,0,0,0.14), 0 15px 35px rgba(0,0,0,0.14);
+}
+
+.btn-menu:hover span:before{
+    transform:scale(0.8);
+    box-shadow: 0 20px 55px rgba(0,0,0,0.14), 0 15px 35px rgba(0,0,0,0.14);
+}
+
+.btn-menu .dots-container{
+    opacity:0;
+    animation: intro 1.6s;
+    animation-fill-mode: forwards;
+
+}
+.btn-menu .dot{
+    width:8px;
+    height:8px;
+    display:block;
+    background-color:#F3CF14;
+    border-radius:100%;
+    position:absolute;
+    transition: all .85s cubic-bezier(0.25, 1, 0.33, 1);
+}
+
+.btn-menu .dot:nth-child(1){
+    top:50px;
+    left:50px;
+    transform:rotate(-140deg);
+    animation: swag1-out 0.3s;
+    animation-fill-mode: forwards;
+    opacity:0;
+}
+.btn-menu .dot:nth-child(2){
+    top:50px;
+    right:50px;
+    transform:rotate(140deg);
+    animation: swag2-out 0.3s;
+    animation-fill-mode: forwards;
+    opacity:0;
+}
+.btn-menu .dot:nth-child(3){
+    bottom:50px;
+    left:50px;
+    transform:rotate(140deg);
+    animation: swag3-out 0.3s;
+    animation-fill-mode: forwards;
+    opacity:0;
+}
+.btn-menu .dot:nth-child(4){
+    bottom:50px;
+    right:50px;
+    transform:rotate(-140deg);
+    animation: swag4-out 0.3s;
+    animation-fill-mode: forwards;
+    opacity:0;
+}
+.btn-menu:hover .dot:nth-child(1){
+    animation: swag1 0.3s;
+    animation-fill-mode: forwards;
+}
+.btn-menu:hover .dot:nth-child(2){
+    animation: swag2 0.3s;
+    animation-fill-mode: forwards;
+}
+.btn-menu:hover .dot:nth-child(3){
+    animation: swag3 0.3s;
+    animation-fill-mode: forwards;
+}
+.btn-menu:hover .dot:nth-child(4){
+    animation: swag4 0.3s;
+    animation-fill-mode: forwards;
+}
+@keyframes intro {
+    0% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+}
+@keyframes swag1 {
+    0% {
+        top:50px;
+        left:50px;
+        width:8px;
+    }
+    50% {
+        width:30px;
+        opacity:1;
+    }
+    100% {
+        top:20px;
+        left:20px;
+        width:8px;
+        opacity:1;
+    }
+}
+@keyframes swag1-out {
+    0% {
+        top:20px;
+        left:20px;
+        width:8px;
+    }
+    50% {
+        width:30px;
+        opacity:1;
+    }
+    100% {
+        top:50px;
+        left:50px;
+        width:8px;
+        opacity:0;
+    }
+}
+@keyframes swag2 {
+    0% {
+        top:50px;
+        right:50px;
+        width:8px;
+    }
+    50% {
+        width:30px;
+        opacity:1;
+    }
+    100% {
+        top:20px;
+        right:20px;
+        width:8px;
+        opacity:1;
+    }
+}
+@keyframes swag2-out {
+    0% {
+        top:20px;
+        right:20px;
+        width:8px;
+    }
+    50% {
+        width:30px;
+        opacity:1;
+    }
+    100% {
+        top:50px;
+        right:50px;
+        width:8px;
+        opacity:0;
+    }
+}
+@keyframes swag3 {
+    0% {
+        bottom:50px;
+        left:50px;
+        width:8px;
+    }
+    50% {
+        width:30px;
+        opacity:1;
+    }
+    100% {
+        bottom:20px;
+        left:20px;
+        width:8px;
+        opacity:1;
+    }
+}
+@keyframes swag3-out {
+    0% {
+        bottom:20px;
+        left:20px;
+        width:8px;
+    }
+    50% {
+        width:30px;
+        opacity:1;
+    }
+    100% {
+        bottom:50px;
+        left:50px;
+        width:8px;
+        opacity:0;
+    }
+}
+@keyframes swag4 {
+    0% {
+        bottom:50px;
+        right:50px;
+        width:8px;
+    }
+    50% {
+        width:30px;
+        opacity:1;
+    }
+    100% {
+        bottom:20px;
+        right:20px;
+        width:8px;
+        opacity:1;
+    }
+}
+@keyframes swag4-out {
+    0% {
+        bottom:20px;
+        right:20px;
+        width:8px;
+    }
+    50% {
+        width:30px;
+        opacity:1;
+    }
+    100% {
+        bottom:50px;
+        right:50px;
+        width:8px;
+        opacity:0;
+    }
+}
