--- a/assets/main/style.css
+++ b/assets/main/style.css
@@ -88,10 +88,10 @@ header nav ul li{
 }
 
 #slideShow img{
-    height: 900px;
+    height: 950px;
 }
 
-#wrapper{
+.wrapper{
     box-sizing:border-box;
     display:flex;
     align-items:center;
@@ -117,6 +117,7 @@ header nav ul li{
     justify-content:center;
     width:200px;
     height:200px;
+    font-size: 45px;
 }
 
 .btn-menu span:before{
@@ -130,6 +131,7 @@ header nav ul li{
     box-sizing:border-box;
     transition: all .85s cubic-bezier(0.25, 1, 0.33, 1);
     box-shadow: 0 30px 85px rgba(0,0,0,0.14), 0 15px 35px rgba(0,0,0,0.14);
+
 }
 
 .btn-menu:hover span:before{
