--- a/assets/main/style.css
+++ b/assets/main/style.css
@@ -14,7 +14,6 @@ header{
     position:relative;
     width: 100%;
     z-index: 1;
-
 }
 
 a{
@@ -27,7 +26,7 @@ a:hover{
     color: yellow;
 }
 
-header nav ul{
+nav ul{
     list-style: none;
 }
 
@@ -35,10 +34,133 @@ nav{
     text-align: center;
 }
 
-header nav ul li{
+ nav ul li{
     display: inline-block;
     margin: 25px;
 }
+
+.content {
+    margin-top: 90px;
+    position: absolute;
+
+    left: 10%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    height: 160px;
+    overflow: hidden;
+    font-family: 'Lato', sans-serif;
+    font-size: 35px;
+    line-height: 40px;
+    color: #ecf0f1;
+}
+
+.content-container {
+    font-weight: 600;
+    overflow: hidden;
+    height: 40px;
+    padding: 0 40px;
+}
+
+.content-container-text {
+    display: inline;
+    float: left;
+    margin: 0;
+}
+
+.content-container-list {
+    margin-top: 0;
+    padding-left: 140px;
+    text-align: left;
+    list-style: none;
+    -webkit-animation-name: change;
+    -webkit-animation-duration: 10s;
+    -webkit-animation-iteration-count: infinite;
+    animation-name: change;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+}
+
+.content-container-list li{
+    line-height: 40px;
+    margin: 0;
+    font-size: 40px;
+    color: red;
+}
+
+p{
+    font-size: 41px;
+    color: white;
+}
+
+@-webkit-keyframes opacity {
+    0%, 100% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+}
+@-webkit-keyframes change {
+    0%, 12.66%, 100% {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+    16.66%, 29.32% {
+        -webkit-transform: translate3d(0, -25%, 0);
+        transform: translate3d(0, -25%, 0);
+    }
+    33.32%,45.98% {
+        -webkit-transform: translate3d(0, -50%, 0);
+        transform: translate3d(0, -50%, 0);
+    }
+    49.98%,62.64% {
+        -webkit-transform: translate3d(0, -75%, 0);
+        transform: translate3d(0, -75%, 0);
+    }
+    66.64%,79.3% {
+        -webkit-transform: translate3d(0, -50%, 0);
+        transform: translate3d(0, -50%, 0);
+    }
+    83.3%,95.96% {
+        -webkit-transform: translate3d(0, -25%, 0);
+        transform: translate3d(0, -25%, 0);
+    }
+}
+@keyframes opacity {
+    0%, 100% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+}
+@keyframes change {
+    0%, 12.66%, 100% {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+    16.66%, 29.32% {
+        -webkit-transform: translate3d(0, -25%, 0);
+        transform: translate3d(0, -25%, 0);
+    }
+    33.32%,45.98% {
+        -webkit-transform: translate3d(0, -50%, 0);
+        transform: translate3d(0, -50%, 0);
+    }
+    49.98%,62.64% {
+        -webkit-transform: translate3d(0, -75%, 0);
+        transform: translate3d(0, -75%, 0);
+    }
+    66.64%,79.3% {
+        -webkit-transform: translate3d(0, -50%, 0);
+        transform: translate3d(0, -50%, 0);
+    }
+    83.3%,95.96% {
+        -webkit-transform: translate3d(0, -25%, 0);
+        transform: translate3d(0, -25%, 0);
+    }
+}
+
 
 .dropbtn {
     background-color: #4CAF50;
@@ -47,6 +169,7 @@ header nav ul li{
     font-size: 16px;
     border: none;
 }
+
 
 .dropdown {
     position: relative;
@@ -60,6 +183,7 @@ header nav ul li{
     min-width: 180px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.3);
     z-index: 1;
+    border-radius: 20px;
 }
 
 .dropdown-content a {
@@ -72,7 +196,7 @@ header nav ul li{
 .dropdown-content a:hover {
     background-color: black;
     color: yellow;
-
+    transform: scale(1.1);
 }
 
 .dropdown:hover .dropdown-content {display: block;}
