--- a/assets/main/style.css
+++ b/assets/main/style.css
@@ -7,6 +7,7 @@
 body{
     margin: 0;
     padding: 0;
+    background-color: dimgray;
 }
 
 header{
@@ -134,6 +135,7 @@ p{
         opacity: 1;
     }
 }
+
 @keyframes change {
     0%, 12.66%, 100% {
         -webkit-transform: translate3d(0, 0, 0);
@@ -161,7 +163,6 @@ p{
     }
 }
 
-
 .dropbtn {
     background-color: #4CAF50;
     color: white;
@@ -169,7 +170,6 @@ p{
     font-size: 16px;
     border: none;
 }
-
 
 .dropdown {
     position: relative;
@@ -204,10 +204,9 @@ p{
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
 
 #carouselExampleIndicators{
-
     z-index: 0;
     background-color: white;
-    position: fixed;
+    position: absolute;
     top:0;
 }
 
@@ -470,4 +469,58 @@ p{
         width:8px;
         opacity:0;
     }
+}
+
+#content-prom{
+    margin-top: 900px;
+}
+
+article{
+    margin-top: 900px;
+    text-align: center;
+}
+
+article .pizza-container{
+    background: url(../img/articleimg/pizza.jpeg);
+    background-size: cover;
+    border-radius: 100px;
+    width: 100%;
+    height: 1000px;
+}
+
+h4{
+    color: white;
+    font-size: 60px;
+    text-align: center;
+    vertical-align: bottom;
+}
+
+mark{
+    background-color: transparent;
+    color: black;
+}
+
+article li{
+    cursor: pointer;
+}
+
+article li:hover {
+    transform: scale(0.9);
+}
+
+article ul{
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 55px;
+    grid-row-gap: 0px;
+}
+
+article ul li:nth-child(1){
+    grid-area: 1 / 1 / 2 / 2;
+}
+
+article ul li:nth-child(2){
+    grid-area: 1 / 2 / 2 / 3;
 }
