--- a/assets/main/style.css
+++ b/assets/main/style.css
@@ -15,6 +15,7 @@ header{
     position:relative;
     width: 100%;
     z-index: 1;
+    margin-top: 0;
 }
 
 a{
@@ -40,127 +41,9 @@ nav{
     margin: 25px;
 }
 
-.content {
-    margin-top: 90px;
-    position: absolute;
-
-    left: 10%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    height: 160px;
-    overflow: hidden;
-    font-family: 'Lato', sans-serif;
-    font-size: 35px;
-    line-height: 40px;
-    color: #ecf0f1;
-}
-
-.content-container {
-    font-weight: 600;
-    overflow: hidden;
-    height: 40px;
-    padding: 0 40px;
-}
-
-.content-container-text {
-    display: inline;
-    float: left;
-    margin: 0;
-}
-
-.content-container-list {
-    margin-top: 0;
-    padding-left: 140px;
-    text-align: left;
-    list-style: none;
-    -webkit-animation-name: change;
-    -webkit-animation-duration: 10s;
-    -webkit-animation-iteration-count: infinite;
-    animation-name: change;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-}
-
-.content-container-list li{
-    line-height: 40px;
-    margin: 0;
-    font-size: 40px;
-    color: red;
-}
-
 p{
     font-size: 41px;
     color: white;
-}
-
-@-webkit-keyframes opacity {
-    0%, 100% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 1;
-    }
-}
-@-webkit-keyframes change {
-    0%, 12.66%, 100% {
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-    16.66%, 29.32% {
-        -webkit-transform: translate3d(0, -25%, 0);
-        transform: translate3d(0, -25%, 0);
-    }
-    33.32%,45.98% {
-        -webkit-transform: translate3d(0, -50%, 0);
-        transform: translate3d(0, -50%, 0);
-    }
-    49.98%,62.64% {
-        -webkit-transform: translate3d(0, -75%, 0);
-        transform: translate3d(0, -75%, 0);
-    }
-    66.64%,79.3% {
-        -webkit-transform: translate3d(0, -50%, 0);
-        transform: translate3d(0, -50%, 0);
-    }
-    83.3%,95.96% {
-        -webkit-transform: translate3d(0, -25%, 0);
-        transform: translate3d(0, -25%, 0);
-    }
-}
-@keyframes opacity {
-    0%, 100% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 1;
-    }
-}
-
-@keyframes change {
-    0%, 12.66%, 100% {
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-    16.66%, 29.32% {
-        -webkit-transform: translate3d(0, -25%, 0);
-        transform: translate3d(0, -25%, 0);
-    }
-    33.32%,45.98% {
-        -webkit-transform: translate3d(0, -50%, 0);
-        transform: translate3d(0, -50%, 0);
-    }
-    49.98%,62.64% {
-        -webkit-transform: translate3d(0, -75%, 0);
-        transform: translate3d(0, -75%, 0);
-    }
-    66.64%,79.3% {
-        -webkit-transform: translate3d(0, -50%, 0);
-        transform: translate3d(0, -50%, 0);
-    }
-    83.3%,95.96% {
-        -webkit-transform: translate3d(0, -25%, 0);
-        transform: translate3d(0, -25%, 0);
-    }
 }
 
 .dropbtn {
@@ -208,6 +91,11 @@ p{
     background-color: white;
     position: absolute;
     top:0;
+}
+
+#slideShow{
+    width: 100%;
+    margin:auto;
 }
 
 #slideShow img{
@@ -268,6 +156,7 @@ p{
     animation-fill-mode: forwards;
 
 }
+
 .btn-menu .dot{
     width:8px;
     height:8px;
@@ -286,6 +175,7 @@ p{
     animation-fill-mode: forwards;
     opacity:0;
 }
+
 .btn-menu .dot:nth-child(2){
     top:50px;
     right:50px;
@@ -294,6 +184,7 @@ p{
     animation-fill-mode: forwards;
     opacity:0;
 }
+
 .btn-menu .dot:nth-child(3){
     bottom:50px;
     left:50px;
@@ -302,6 +193,7 @@ p{
     animation-fill-mode: forwards;
     opacity:0;
 }
+
 .btn-menu .dot:nth-child(4){
     bottom:50px;
     right:50px;
@@ -310,22 +202,27 @@ p{
     animation-fill-mode: forwards;
     opacity:0;
 }
+
 .btn-menu:hover .dot:nth-child(1){
     animation: swag1 0.3s;
     animation-fill-mode: forwards;
 }
+
 .btn-menu:hover .dot:nth-child(2){
     animation: swag2 0.3s;
     animation-fill-mode: forwards;
 }
+
 .btn-menu:hover .dot:nth-child(3){
     animation: swag3 0.3s;
     animation-fill-mode: forwards;
 }
+
 .btn-menu:hover .dot:nth-child(4){
     animation: swag4 0.3s;
     animation-fill-mode: forwards;
 }
+
 @keyframes intro {
     0% {
         opacity:0;
@@ -385,6 +282,7 @@ p{
         opacity:1;
     }
 }
+
 @keyframes swag2-out {
     0% {
         top:20px;
@@ -402,6 +300,7 @@ p{
         opacity:0;
     }
 }
+
 @keyframes swag3 {
     0% {
         bottom:50px;
@@ -419,6 +318,7 @@ p{
         opacity:1;
     }
 }
+
 @keyframes swag3-out {
     0% {
         bottom:20px;
@@ -453,6 +353,7 @@ p{
         opacity:1;
     }
 }
+
 @keyframes swag4-out {
     0% {
         bottom:20px;
@@ -471,21 +372,25 @@ p{
     }
 }
 
-#content-prom{
-    margin-top: 900px;
-}
-
-article{
+#adsPanel{
     margin-top: 900px;
     text-align: center;
 }
 
-article .pizza-container{
+#adsPanel .pizza-container{
     background: url(../img/articleimg/pizza.jpeg);
     background-size: cover;
     border-radius: 100px;
     width: 100%;
-    height: 1000px;
+    height: 800px;
+}
+
+#adsPanel .pizza-container-2{
+    background: url("../img/articleimg/sushi.jpg");
+    background-size: cover;
+    border-radius: 100px;
+    width: 100%;
+    height: 800px;
 }
 
 h4{
@@ -497,18 +402,24 @@ h4{
 
 mark{
     background-color: transparent;
-    color: black;
+    color: red;
 }
 
-article li{
+h2{
+    text-align: center;
+    color: white;
+    font-size: 30px;
+}
+
+#adsPanel li{
     cursor: pointer;
 }
 
-article li:hover {
+#adsPanel li:hover {
     transform: scale(0.9);
 }
 
-article ul{
+#adsPanel ul{
     list-style: none;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -517,10 +428,74 @@ article ul{
     grid-row-gap: 0px;
 }
 
-article ul li:nth-child(1){
+#adsPanel ul li:nth-child(1){
     grid-area: 1 / 1 / 2 / 2;
 }
 
-article ul li:nth-child(2){
+#adsPanel ul li:nth-child(2){
     grid-area: 1 / 2 / 2 / 3;
 }
+
+#news-panel{
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+#news-panel .news-list{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 22px;
+    grid-row-gap: 0px;
+    list-style: none;
+    text-align: center;
+}
+
+#news-panel .news-list li:nth-child(1) { grid-area: 1 / 1 / 2 / 2; }
+#news-panel .news-list li:nth-child(2) { grid-area: 1 / 2 / 2 / 3; }
+#news-panel .news-list li:nth-child(3)  { grid-area: 1 / 3 / 2 / 4; }
+#news-panel .news-list li:nth-child(4)  { grid-area: 2 / 1 / 3 / 2; }
+#news-panel .news-list li:nth-child(5) { grid-area: 2 / 2 / 3 / 3; }
+#news-panel .news-list li:nth-child(6) { grid-area: 2 / 3 / 3 / 4; }
+
+#news-panel .news-list li .news-list-content{
+}
+
+#news-panel img{
+    width: 600px;
+    height: 500px;
+}
+
+#news-panel .news-list .news-list-content:hover{
+    border: 2px solid yellow;
+}
+
+footer{
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    text-align: center;
+}
+
+h5{
+    color: white;
+    font-size: 17px;
+}
+
+h5:hover{
+    color: yellow;
+}
+
+footer .footer-content{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 22px;
+    grid-row-gap: 0px;
+}
+
+footer .footer-content li:nth-child(1) { grid-area: 1 / 1 / 2 / 2; }
+footer .footer-content li:nth-child(2){ grid-area: 1 / 2 / 2 / 3; }
+footer .footer-content li:nth-child(3) { grid-area: 1 / 3 / 2 / 4; }
+footer .footer-content li:nth-child(4) { grid-area: 2 / 1 / 3 / 2; }
+footer .footer-content li:nth-child(5) { grid-area: 2 / 2 / 3 / 3; }
+footer .footer-content li:nth-child(6) { grid-area: 2 / 3 / 3 / 4; }
