--- a/assets/main/style.css
+++ b/assets/main/style.css
@@ -71,7 +71,6 @@ p{
 
 .dropdown-content a {
     color: black;
-
     text-decoration: none;
     display: block;
 }
@@ -143,7 +142,6 @@ p{
     box-sizing:border-box;
     transition: all .85s cubic-bezier(0.25, 1, 0.33, 1);
     box-shadow: 0 30px 85px rgba(0,0,0,0.14), 0 15px 35px rgba(0,0,0,0.14);
-
 }
 
 .btn-menu:hover span:before{
@@ -155,7 +153,6 @@ p{
     opacity:0;
     animation: intro 1.6s;
     animation-fill-mode: forwards;
-
 }
 
 .btn-menu .dot{
@@ -232,6 +229,7 @@ p{
         opacity:1;
     }
 }
+
 @keyframes swag1 {
     0% {
         top:50px;
@@ -249,6 +247,7 @@ p{
         opacity:1;
     }
 }
+
 @keyframes swag1-out {
     0% {
         top:20px;
@@ -266,6 +265,7 @@ p{
         opacity:0;
     }
 }
+
 @keyframes swag2 {
     0% {
         top:50px;
@@ -337,6 +337,7 @@ p{
         opacity:0;
     }
 }
+
 @keyframes swag4 {
     0% {
         bottom:50px;
@@ -374,6 +375,8 @@ p{
 }
 
 #adsPanel{
+    width: 100%;
+    height: 100%;
     margin-top: 900px;
     text-align: center;
 }
@@ -407,7 +410,6 @@ mark{
 }
 
 h2{
-
     color: white;
     font-size: 30px;
 }
