--- a/assets/main/style.css
+++ b/assets/main/style.css
@@ -7,12 +7,12 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: dimgray;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 header{
     background-color: rgba(0,0,0,0.5);
-    position:relative;
+    position: relative;
     width: 100%;
     z-index: 1;
     margin-top: 0;
@@ -514,3 +514,89 @@ footer .footer-content li:nth-child(3) { grid-area: 1 / 3 / 2 / 4; }
 footer .footer-content li:nth-child(4) { grid-area: 2 / 1 / 3 / 2; }
 footer .footer-content li:nth-child(5) { grid-area: 2 / 2 / 3 / 3; }
 footer .footer-content li:nth-child(6) { grid-area: 2 / 3 / 3 / 4; }
+
+/* ----------------------- First page done*/
+
+#pizza-list{
+    margin: auto;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    text-align: center;
+    margin-top: -30px;
+}
+
+#pizza-list h2{
+    font-size: 40px;
+}
+
+.pizza-list-parent{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 50px;
+    list-style: none;
+}
+
+.pizza-list-parent li:nth-child(1) { grid-area: 1 / 1 / 2 / 2; }
+.pizza-list-parent li:nth-child(2) { grid-area: 1 / 2 / 2 / 3; }
+.pizza-list-parent li:nth-child(3) { grid-area: 1 / 3 / 2 / 4; }
+.pizza-list-parent li:nth-child(4) { grid-area: 1 / 4 / 2 / 5; }
+.pizza-list-parent li:nth-child(5) { grid-area: 1 / 5 / 2 / 6; }
+.pizza-list-parent li:nth-child(6) { grid-area: 2 / 1 / 3 / 2; }
+.pizza-list-parent li:nth-child(7) { grid-area: 2 / 2 / 3 / 3; }
+.pizza-list-parent li:nth-child(8) { grid-area: 2 / 3 / 3 / 4; }
+.pizza-list-parent li:nth-child(9) { grid-area: 2 / 4 / 3 / 5; }
+.pizza-list-parent li:nth-child(10) { grid-area: 2 / 5 / 3 / 6; }
+
+.pizza-list-parent li:hover{
+    border: 1px solid yellow;
+    border-radius: 10px;
+}
+
+h3{
+    color: white;
+}
+
+.item-price{
+    border: 1px solid yellow;
+    width: 60%;
+    margin: auto;
+    font-size: 20px;
+    color: white;
+    border-radius: 10px;
+    height: 30px;
+}
+
+.item-price:hover{
+    color: black;
+    background-color: yellow;
+    cursor: pointer;
+}
+
+.item-text{
+    float: left;
+    margin-left: 30%;
+}
+
+.pizza-item{
+    width: 60%;
+    margin:auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.pizza-item-text{
+    float: left;
+    color: white;
+    font-size: 25px;
+}
+
+.pizza-item-ico{
+    margin-left: 80%;
+}
+
+.pizza-item-ico:hover{
+    cursor: pointer;
+    color: yellow;
+}
