--- a/assets/main/media.css
+++ b/assets/main/media.css
@@ -3,9 +3,11 @@
         display: inline-block !important;
         margin-right: 5%;
     }
+
     #news-panel{
         background-color: rgba(0, 0, 0, 0.7);
     }
+
     #news-panel .news-list li img {
         width: 100%;
         height: auto;
@@ -34,6 +36,9 @@
     #slideShow{
         display: none;
     }
+    #hamb-item img{
+        width: 50%;
+    }
     footer .footer-content{
         display: inline-block !important;
     }
@@ -48,6 +53,32 @@
 
 @media only screen and (max-width: 1395px) {
     .pizza-list-parent{
+        display: inline-block !important;
+    }
+}
+
+@media only screen and (max-width: 1225px){
+    .hamb-list-parent{
+        grid-template-columns: repeat(2, 1fr) !important;
+        grid-template-rows: repeat(7, 1fr) !important;
+    }
+    .hamb-list-parent li:nth-child(1) { grid-area: 1 / 1 / 2 / 2 !important; }
+    .hamb-list-parent li:nth-child(2) { grid-area: 1 / 2 / 2 / 3 !important; }
+    .hamb-list-parent li:nth-child(3) { grid-area: 2 / 1 / 3 / 2 !important; }
+    .hamb-list-parent li:nth-child(4) { grid-area: 2 / 2 / 3 / 3 !important; }
+    .hamb-list-parent li:nth-child(5) { grid-area: 3 / 1 / 4 / 2 !important; }
+    .hamb-list-parent li:nth-child(6) { grid-area: 3 / 2 / 4 / 3 !important; }
+    .hamb-list-parent li:nth-child(7) { grid-area: 4 / 1 / 5 / 2 !important; }
+    .hamb-list-parent li:nth-child(8){ grid-area: 4 / 2 / 5 / 3 !important; }
+    .hamb-list-parent li:nth-child(9){ grid-area: 5 / 1 / 6 / 2 !important; }
+    .hamb-list-parent li:nth-child(10) { grid-area: 5 / 2 / 6 / 3 !important; }
+    .hamb-list-parent li:nth-child(11){ grid-area: 6 / 1 / 7 / 2 !important; }
+    .hamb-list-parent li:nth-child(12) { grid-area: 6 / 2 / 7 / 3 !important; }
+    .hamb-list-parent li:nth-child(13) { grid-area: 7 / 1 / 8 / 2 !important; }
+}
+
+@media only screen and (max-width: 1225px) {
+    .hamb-list-parent{
         display: inline-block !important;
     }
 }
