--- a/assets/main/style.css
+++ b/assets/main/style.css
@@ -600,3 +600,91 @@ h3{
     cursor: pointer;
     color: yellow;
 }
+/*-------------Hamburger...--------------------*/
+
+#hamb-list{
+    margin: auto;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    text-align: center;
+    margin-top: -30px;
+}
+
+#hamb-list h2{
+    font-size: 40px;
+}
+
+.hamb-list-parent{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 50px;
+    grid-row-gap: 20px;
+    list-style: none;
+}
+
+.hamb-list-parent li:nth-child(1) {grid-area: 1 / 1 / 2 / 2;}
+.hamb-list-parent li:nth-child(2) { grid-area: 1 / 2 / 2 / 3; }
+.hamb-list-parent li:nth-child(3) { grid-area: 1 / 3 / 2 / 4; }
+.hamb-list-parent li:nth-child(4) { grid-area: 2 / 1 / 3 / 2; }
+.hamb-list-parent li:nth-child(5) { grid-area: 2 / 2 / 3 / 3; }
+.hamb-list-parent li:nth-child(6) { grid-area: 2 / 3 / 3 / 4; }
+.hamb-list-parent li:nth-child(7) { grid-area: 3 / 1 / 4 / 2; }
+.hamb-list-parent li:nth-child(8) { grid-area: 3 / 2 / 4 / 3; }
+.hamb-list-parent li:nth-child(9) { grid-area: 3 / 3 / 4 / 4; }
+.hamb-list-parent li:nth-child(10) { grid-area: 4 / 1 / 5 / 2; }
+.hamb-list-parent li:nth-child(11) { grid-area: 4 / 2 / 5 / 3; }
+.hamb-list-parent li:nth-child(12) { grid-area: 4 / 3 / 5 / 4; }
+.hamb-list-parent li:nth-child(13) { grid-area: 5 / 1 / 6 / 2; }
+
+.hamb-list-parent li:hover{
+    border: 1px solid yellow;
+    border-radius: 10px;
+}
+
+h3{
+    color: white;
+}
+
+.item-price{
+    border: 1px solid yellow;
+    width: 60%;
+    margin: auto;
+    font-size: 20px;
+    color: white;
+    border-radius: 10px;
+    height: 30px;
+}
+
+.item-price:hover{
+    color: black;
+    background-color: yellow;
+    cursor: pointer;
+}
+
+.hamb-item-text{
+    float: left;
+    margin-left: 30%;
+}
+
+.hamb-item{
+    width: 60%;
+    margin:auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.hamb-item-text{
+    float: left;
+    color: white;
+    font-size: 25px;
+}
+
+.hamb-item-ico{
+    margin-left: 80%;
+}
+
+.hamb-item-ico:hover {
+    cursor: pointer;
+    color: yellow;
+}
