--- a/assets/main/style.css
+++ b/assets/main/style.css
@@ -446,6 +446,7 @@ h2 {
 #news-panel {
     background-color: rgba(0, 0, 0, 0.7);
     width: 100%;
+    margin-top: 100px;
 }
 
 #news-panel .news-list {
@@ -562,7 +563,8 @@ section {
     text-align: center;
     margin-top: -30px;
 }
-section h2{
+
+section h2 {
     margin-top: 50px;
 }
 
@@ -575,7 +577,7 @@ section h2{
     list-style: none;
 }
 
-li:hover {
+section li:hover {
     border: 1px solid yellow;
     border-radius: 10px;
 }
@@ -590,7 +592,7 @@ li:hover {
     height: 30px;
 }
 
-h3{
+h3 {
     color: white;
 }
 
@@ -722,7 +724,7 @@ h3{
 
 /*-------------Salad...--------------------*/
 
-.salad-list-parent{
+.salad-list-parent {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -730,4 +732,16 @@ h3{
     grid-row-gap: 20px;
     list-style: none;
 }
+
+/*-------------Desserts...--------------------*/
+
+.dessert-list-parent {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 50px;
+    grid-row-gap: 20px;
+    list-style: none;
+}
+
 
