--- a/assets/main/style.css
+++ b/assets/main/style.css
@@ -739,9 +739,22 @@ h3 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 50px;
+    grid-column-gap: 20px;
     grid-row-gap: 20px;
     list-style: none;
 }
 
+/*-------------Drinks...--------------------*/
 
+.drinks-list-parent {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    list-style: none;
+}
+
+.drinks-list-parent img{
+    height: 300px;
+}
