--- a/assets/main/media.css
+++ b/assets/main/media.css
@@ -69,11 +69,18 @@
         min-width: 140px !important;
         margin-left: -15%;
     }
+    .drinks-list-parent{
+        display: inline-block !important;
+    }
 }
 
 @media only screen and (max-width: 1395px) {
     .pizza-list-parent {
         grid-template-columns: repeat(4, 1fr) !important;
+        grid-template-rows: repeat(3, 1fr) !important;
+    }
+    .drinks-list-parent{
+        grid-template-columns: repeat(3, 1fr) !important;
         grid-template-rows: repeat(3, 1fr) !important;
     }
 }
@@ -93,6 +100,13 @@
     .hamb-list-parent {
         grid-template-columns: repeat(2, 1fr) !important;
         grid-template-rows: repeat(7, 1fr) !important;
+    }
+}
+
+@media only screen and (max-width: 1225px) {
+    .drinks-list-parent{
+        grid-template-columns: repeat(2, 1fr) !important;
+        grid-template-rows: repeat(4, 1fr) !important;
     }
 }
 
