--- a/assets/main/style.css
+++ b/assets/main/style.css
@@ -378,27 +378,9 @@ p {
     }
 }
 
-#adsPanel {
-    width: 100%;
-    height: 100%;
+article {
     margin-top: 900px;
     text-align: center;
-}
-
-#adsPanel .pizza-container {
-    background: url(../img/articleimg/pizza.jpeg);
-    background-size: cover;
-    border-radius: 100px;
-    width: 100%;
-    height: 800px;
-}
-
-#adsPanel .pizza-container-2 {
-    background: url("../img/articleimg/sushi.jpg");
-    background-size: cover;
-    border-radius: 100px;
-    width: 100%;
-    height: 800px;
 }
 
 h4 {
@@ -418,55 +400,67 @@ h2 {
     font-size: 30px;
 }
 
-#adsPanel li {
-    cursor: pointer;
-}
-
-#adsPanel li:hover {
-    transform: scale(0.9);
-}
-
-#adsPanel ul {
+.news-content {
     list-style: none;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 55px;
-    grid-row-gap: 0px;
-}
-
-#adsPanel ul li:nth-child(1) {
-    grid-area: 1 / 1 / 2 / 2;
-}
-
-#adsPanel ul li:nth-child(2) {
-    grid-area: 1 / 2 / 2 / 3;
+    grid-template-rows: repeat(5, 1fr);
 }
 
 #news-panel {
-    background-color: rgba(0, 0, 0, 0.7);
-    width: 100%;
-    margin-top: 100px;
+    margin-top: 40px;
 }
 
 #news-panel .news-list {
+    list-style: none;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 10px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 0px;
+}
+
+.news-list-content img {
+    width: 100%;
+}
+
+article {
+    margin-top: 900px;
+}
+
+article ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 50px;
     grid-row-gap: 0px;
     list-style: none;
+}
+
+article .image-holder {
+    background-size: cover;
+    background-image: url("../img/articleimg/pizza.jpg");
+    width: 100%;
+    height: 700px;
+    position: relative;
     text-align: center;
 }
 
-
-#news-panel img {
+article .image-holder-2 {
+    background-size: cover;
+    background-image: url("../img/articleimg/sushi.jpg");
     width: 100%;
-    height: 500px;
+    height: 700px;
+    position: relative;
+    text-align: center;
 }
 
-#news-panel .news-list .news-list-content:hover {
-    border: 2px solid yellow;
+.bottom-right {
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+    color: white;
+    font-size: 40px;
 }
 
 footer {
@@ -680,4 +674,41 @@ header li:nth-child(1) .dropdown-content {
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.3);
     z-index: 1;
     border-radius: 20px;
+}
+
+.news-panel {
+    margin-top: 100px;
+}
+
+.news-panel .news-content img {
+    width: 100%;
+}
+
+.news-panel .news-content li {
+    margin: auto;
+}
+
+.new-a span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.4s;
+}
+
+.new-a span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.new-a:hover span {
+    padding-right: 25px;
+}
+
+.new-a:hover span:after {
+    opacity: 1;
+    right: 0;
 }
